# levelog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
assets/: README.md
docs/: design.md  growth-log-system-design.md  implementation-plan.md  personal-evidence-graph-design.md  publication-audit.md  release-runbook.md  requirement.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_user_growth_context.sql  0003_personal_evidence_graph.sql
src-tauri/prompts/: activity-analysis.v1.md  activity-analysis.v2.md  evidence-extraction.v1.md  quest-proposal.v1.md
src-tauri/resources/: README.md
src-tauri/schemas/: activity-analysis.v1.schema.json  activity-analysis.v2.schema.json  evidence-extraction.v1.schema.json  quest-proposal.v1.schema.json
src-tauri/src/: dto.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: evidence.rs  mod.rs  services.rs
src-tauri/src/commands/: activity.rs  app.rs  codex.rs  data.rs  evidence.rs  evidence_import.rs  mod.rs  quest.rs  update.rs
src-tauri/src/domain/: mod.rs  model.rs
src-tauri/src/infrastructure/: mod.rs  source_import.rs
src-tauri/src/infrastructure/codex/: discovery.rs  mod.rs
src-tauri/src/infrastructure/database/: mod.rs
src-tauri/tests/: verify_update_artifact.rs
(+49 files in other folders)
